Fixed F.S. 'access denied' issue